--- a/ComicBookGallery/Views/ComicBooks/Index.cshtml
+++ b/ComicBookGallery/Views/ComicBooks/Index.cshtml
@@ -9,11 +9,13 @@
 <div class="row">
     @foreach (var comicBook in Model)
     {
-        <div class="col-md-3">
-            <h4>@comicBook.DisplayText</h4>
-            <img src="/Images/@comicBook.CoverImageFileName"
-                 alt="@comicBook.DisplayText"
-                 class="img-responsive" />
+        <div class="col-md-3" >
+            <h4>@Html.ActionLink(comicBook.DisplayText,"Detail",new { id = comicBook.Id })</h4>
+            <a href="@Url.Action("Detail",new { id = comicBook.Id })">
+                <img src="/Images/@comicBook.CoverImageFileName"
+                     alt="@comicBook.DisplayText"
+                     class="img-responsive" />
+            </a>
         </div>
     }
 </div>
